# url-shortner

./: LICENSE
backend/: main.py  pyproject.toml
backend/auth/: auth.py
backend/data/: database.py  models.py  schemas.py
backend/routes/: url.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DeleteUrlModal.tsx  Footer.tsx  Navbar.tsx  QrCode.tsx  UrlInputBox.tsx
frontend/src/pages/: AboutPage.tsx  AllUrlPage.tsx  HomePage.tsx  LoginPage.tsx  ShortenPage.tsx  SignUpPage.tsx
frontend/src/routes/: router.tsx
